@@ -1,4 +1,4 @@
-.TH SG3_UTILS_JSON "8" "June 2023" "sg3_utils\-1.48" SG3_UTILS
+.TH SG3_UTILS_JSON "8" "July 2023" "sg3_utils\-1.48" SG3_UTILS
 .SH NAME
 sg3_utils_json \- JSON output for some sg3_utils utilities
 .SH SYNOPSIS
