@@ -2,7 +2,7 @@ sg3-utils (1.48-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Wed, 23 Jun 2023 19:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 18 Jul 2023 11:00:00 -0400
 
 sg3-utils (1.47-0.1) unstable; urgency=low
 
